--- a/src/components/todo/to_do_list.css
+++ b/src/components/todo/to_do_list.css
@@ -21,6 +21,8 @@
   color: #333;
   display: flex;
   align-items: center;
+  justify-content: flex-start;
+  width: 70%;
   padding-bottom: 15px;
   border-bottom: 1px solid #cecece;
 }
